# Boceto

./: .gitignore  README.md  TODO.md
app/: CMakeLists.txt  YouTubeSampler.jucer
app/Builds/Android/: settings.gradle
app/Builds/Android/app/: CMakeLists.txt  build.gradle
app/Builds/Android/app/src/debug/res/values/: string.xml
app/Builds/Android/app/src/main/: AndroidManifest.xml
app/Source/: AudioFetcher.cpp  AudioFetcher.h  EffectsChain.cpp  EffectsChain.h  EfxView.h  LoopExporter.cpp  LoopExporter.h  Main.cpp  MainComponent.cpp  MainComponent.h  PitchFader.h  PolyVoice.cpp  PolyVoice.h  Recorder.cpp  Recorder.h  SamplerEngine.cpp  SamplerEngine.h  WaveformDisplay.h
server/: main.py  requirements.txt
